fix(spells): avoid overlap between title and dialog close button

--- a/src/ui/Dialog/Dialog.module.css
+++ b/src/ui/Dialog/Dialog.module.css
@@ -1,10 +1,4 @@
 .dialog {
 	color: var(--text-color);
 	max-width: 900px;
-
-	.closeButton {
-		position: absolute;
-		top: var(--spacing);
-		right: var(--spacing);
-	}
 }
